--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
    <div>
-     (M=Male, F=Female)<br/>
+     (M=Male Voice, F=Female Voice)<br/>
    </div>
    
    <div>
@@ -137,18 +137,20 @@
    <div>   
       <table>
       	<tr>
-           <th><input type="submit" value="Male" onclick="male()"  class="buttonMale button" ></th>
+           <th><input type="submit" value="Male Voice" onclick="male()"  class="buttonMale button" ></th>
 	       <th><input id="screen1" class="buttonMale button"></th>
         </tr>  
 	    <tr>
-           <th><input type="submit" value="Female" onclick="female()" class="buttonFemale button"></th>
+           <th><input type="submit" value="Female Voice" onclick="female()" class="buttonFemale button"></th>
 	       <th><input id="screen2" class="buttonFemale button"></th>
         </tr>
-	 
+	    <tr>
+		   <th><input type="button" value="Clear" onclick="clearInput()" class="buttonC button"></th>
+		</tr>
       </table> 
     </div>
 
-<input type="button" value="Clear" onclick="clearInput()" class="buttonC button">
+
 
 	
 	
