--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
    <div>
    <table>
      <tr>
-        <th><input type="button" value="M1" onclick="M1()" class="buttonM button"></th>
-        <th><input type="button" value="M2" onclick="M2()" class="buttonM button"></th>
-	    <th><input type="button" value="M3" onclick="M3()" class="buttonM button"></th>
-        <th><input type="button" value="M4" onclick="M4()" class="buttonM button"></th>
+        <th><input type="button" value="Mˉ" onclick="M1()" class="buttonM button"></th>
+        <th><input type="button" value="Mˊ" onclick="M2()" class="buttonM button"></th>
+	    <th><input type="button" value="Mˇ" onclick="M3()" class="buttonM button"></th>
+        <th><input type="button" value="Mˋ" onclick="M4()" class="buttonM button"></th>
 	    <!-- <th><input type="button" value="M5" onclick="M5()"></th> -->
 	</tr>
     <tr>
-        <th><input type="button" value="F1" onclick="F1()" class="buttonF button"></th>
-        <th><input type="button" value="F2" onclick="F2()" class="buttonF button"></th>
-	    <th><input type="button" value="F3" onclick="F3()" class="buttonF button"></th>
-        <th><input type="button" value="F4" onclick="F4()" class="buttonF button"></th>
+        <th><input type="button" value="Fˉ" onclick="F1()" class="buttonF button"></th>
+        <th><input type="button" value="Fˊ" onclick="F2()" class="buttonF button"></th>
+	    <th><input type="button" value="Fˇ" onclick="F3()" class="buttonF button"></th>
+        <th><input type="button" value="Fˋ" onclick="F4()" class="buttonF button"></th>
 	    <!-- <th><input type="button" value="F5" onclick="F5()"></th> -->
 	</tr>
    </table>
