--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 </head>
 <body  class="center">
    <div>
-   <img src='pic.png' width="700" height="250">
+   <img src='pic.png' width="700" height="200"></br>
+   </br>
    </div>
 
 
@@ -121,10 +122,10 @@
    <table>
      <tr>
 	    <th>Male Voice</th>
-		<th><button type="button" class="buttonM button"><span><img src='1T.png' width="100" height="50" onclick="M1()"></span></button></th>
-		<th><button type="button" class="buttonM button"><span><img src='2T.png' width="100" height="50" onclick="M2()"></span></button></th>
-		<th><button type="button" class="buttonM button"><span><img src='3T.png' width="100" height="50" onclick="M3()"></span></button></th>
-		<th><button type="button" class="buttonM button"><span><img src='4T.png' width="100" height="50" onclick="M4()"></span></button></th>	
+		<th><button type="button" class="buttonM button"><span><img src='1T.png' width="80" height="40" onclick="M1()"></span></button></th>
+		<th><button type="button" class="buttonM button"><span><img src='2T.png' width="80" height="40" onclick="M2()"></span></button></th>
+		<th><button type="button" class="buttonM button"><span><img src='3T.png' width="80" height="40" onclick="M3()"></span></button></th>
+		<th><button type="button" class="buttonM button"><span><img src='4T.png' width="80" height="40" onclick="M4()"></span></button></th>	
         <!-- <th><input type="button" value="Mˉ" onclick="M2()" class="buttonM button"></th>        -->
         <!-- <th><input type="button" value="Mˊ" onclick="M2()" class="buttonM button"></th> -->
 	    <!-- <th><input type="button" value="Mˇ" onclick="M3()" class="buttonM button"></th> -->
@@ -133,10 +134,10 @@
 	</tr>
     <tr>
 		<th>Female Voice</th>
-		<th><button type="button" class="buttonF button"><span><img src='1T.png' width="100" height="50" onclick="F1()"></span></button></th>
-		<th><button type="button" class="buttonF button"><span><img src='2T.png' width="100" height="50" onclick="F2()"></span></button></th>
-		<th><button type="button" class="buttonF button"><span><img src='3T.png' width="100" height="50" onclick="F3()"></span></button></th>
-		<th><button type="button" class="buttonF button"><span><img src='4T.png' width="100" height="50" onclick="F4()"></span></button></th>	
+		<th><button type="button" class="buttonF button"><span><img src='1T.png' width="80" height="40" onclick="F1()"></span></button></th>
+		<th><button type="button" class="buttonF button"><span><img src='2T.png' width="80" height="40" onclick="F2()"></span></button></th>
+		<th><button type="button" class="buttonF button"><span><img src='3T.png' width="80" height="40" onclick="F3()"></span></button></th>
+		<th><button type="button" class="buttonF button"><span><img src='4T.png' width="80" height="40" onclick="F4()"></span></button></th>	
         <!-- <th><input type="button" value="Fˉ" onclick="F1()" class="buttonF button"></th> -->
         <!-- <th><input type="button" value="Fˊ" onclick="F2()" class="buttonF button"></th> -->
 	    <!-- <th><input type="button" value="Fˇ" onclick="F3()" class="buttonF button"></th> -->
@@ -157,20 +158,21 @@
       	<tr>
            <th><input type="submit" value="Male Voice" onclick="male()"  class="buttonMale button" ></th>
 	       <th><input id="screen1" class="buttonMale button"></th>
+		   
         </tr>  
 	    <tr>
            <th><input type="submit" value="Female Voice" onclick="female()" class="buttonFemale button"></th>
 	       <th><input id="screen2" class="buttonFemale button"></th>
         </tr>
 	    <tr>
-		   <th><input type="button" value="Clear" onclick="clearInput()" class="buttonC button"></th>
+		   <th width="100" height="50"><input type="button" value="Clear" onclick="clearInput()" class="buttonC button"></th>
 		</tr>
       </table> 
     </div>
 
 
    <div>
-   <img src='explanation.jpg' width="300" height="200">
+   <img src='explanation.jpg' class="explanation" width="300" height="200">
    </div>
 	
 	
