--- a/index.html
+++ b/index.html
@@ -1,27 +1,217 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="style.css"/>
+<title>发音工具</title>
+<script type="text/javascript"> 
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+   function male(){	
 
-    <!-- Optional JavaScript; choose one of the two! -->
+	   var j;
+	   var u =document.getElementById("screen1").value;
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	   document.getElementById("display").innerHTML = u;
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  </body>
+	   var counter1 = 0;
+	   var temp1 = 0;
+
+	   for(j=0;j<u.length;j++){
+	       if(u[j]==1){
+		      setTimeout(function(){document.getElementById("a").play()}, j*1000); 
+	        } 
+	       if(u[j]==2){
+		      setTimeout(function(){document.getElementById("b").play()}, j*1000);
+	        } 
+	       if(u[j]==3){
+               if(j+1>temp1){
+		           temp1 = j;
+		           counter1=0;
+				   while(u[temp1]==3){
+		               counter1++;
+		               temp1++;
+		            }
+		        }
+		       if(counter1%2==1){
+		           setTimeout(function(){document.getElementById("c").play()}, j*1000);
+		           counter1--;
+		        }else{
+		           setTimeout(function(){document.getElementById("b").play()}, j*1000);
+		  		   counter1--;
+		        }
+	        } 
+           if(u[j]==4){
+		      setTimeout(function(){document.getElementById("d").play()}, j*1000);
+	        }    
+	    }
+
+    }
+
+   function female(){
+	   var i;
+	   var v =document.getElementById("screen2").value;
+	    document.getElementById("display").innerHTML = v;
+	   var counter2 = 0;
+	   var temp2 = 0;
+
+	   for(i=0;i<v.length;i++){
+
+	      if(v[i]==1){
+		     setTimeout(function(){document.getElementById("e").play()}, i*1000); 
+	        } 
+	      if(v[i]==2){
+		     setTimeout(function(){document.getElementById("f").play()}, i*1000);
+	        } 
+		  if(v[i]==3){
+             if(i+1>temp2){
+		          temp2 = i;
+		          counter2=0;
+		          while(v[temp2]==3){
+		              counter2++;
+				      temp2++;
+		            }
+		        }
+		     if(counter2%2==1){
+		         setTimeout(function(){document.getElementById("g").play()}, i*1000);
+		         counter2--;
+		        }else{
+		          setTimeout(function(){document.getElementById("f").play()}, i*1000);
+		  		  counter2--;
+		        }
+	        } 
+
+	      if(v[i]==4){
+		      setTimeout(function(){document.getElementById("h").play()}, i*1000);
+	        }  
+
+
+	    }
+
+    }
+
+      function clearInput(){           
+	       document.getElementById("screen1").value="";
+    	   document.getElementById("screen2").value="";
+		   document.getElementById("display").innerHTML="";
+		   }
+
+   function M1(){document.getElementById("a").play(); }
+   function M2(){document.getElementById("b").play(); }
+   function M3(){document.getElementById("c").play(); }
+   function M4(){document.getElementById("d").play(); }
+   function M5(){ }
+
+   function F1(){document.getElementById("e").play(); }
+   function F2(){document.getElementById("f").play(); }
+   function F3(){document.getElementById("g").play(); }
+   function F4(){document.getElementById("h").play(); }
+   function F5(){ } 	
+
+</script>
+</head>
+<body  class="center">
+   <div>
+   <img src='pic.png' width="600" height="180"></br>
+   </br>
+   </br>
+   </br>
+   </div>
+
+
+
+   <div>
+   <table>
+     <tr>
+	    <th>Male Voice</th>
+		<th><button type="button" class="buttonM button"><span><img src='1T.png' width="80" height="40" onclick="M1()"></span></button></th>
+		<th><button type="button" class="buttonM button"><span><img src='2T.png' width="80" height="40" onclick="M2()"></span></button></th>
+		<th><button type="button" class="buttonM button"><span><img src='3T.png' width="80" height="40" onclick="M3()"></span></button></th>
+		<th><button type="button" class="buttonM button"><span><img src='4T.png' width="80" height="40" onclick="M4()"></span></button></th>	
+        <!-- <th><input type="button" value="Mˉ" onclick="M2()" class="buttonM button"></th>        -->
+        <!-- <th><input type="button" value="Mˊ" onclick="M2()" class="buttonM button"></th> -->
+	    <!-- <th><input type="button" value="Mˇ" onclick="M3()" class="buttonM button"></th> -->
+        <!-- <th><input type="button" value="Mˋ" onclick="M4()" class="buttonM button"></th> -->
+	    <!-- <th><input type="button" value="M5" onclick="M5()"></th> -->
+	</tr>
+    <tr>
+		<th>Female Voice</th>
+		<th><button type="button" class="buttonF button"><span><img src='1T.png' width="80" height="40" onclick="F1()"></span></button></th>
+		<th><button type="button" class="buttonF button"><span><img src='2T.png' width="80" height="40" onclick="F2()"></span></button></th>
+		<th><button type="button" class="buttonF button"><span><img src='3T.png' width="80" height="40" onclick="F3()"></span></button></th>
+		<th><button type="button" class="buttonF button"><span><img src='4T.png' width="80" height="40" onclick="F4()"></span></button></th>	
+        <!-- <th><input type="button" value="Fˉ" onclick="F1()" class="buttonF button"></th> -->
+        <!-- <th><input type="button" value="Fˊ" onclick="F2()" class="buttonF button"></th> -->
+	    <!-- <th><input type="button" value="Fˇ" onclick="F3()" class="buttonF button"></th> -->
+        <!-- <th><input type="button" value="Fˋ" onclick="F4()" class="buttonF button"></th> -->
+	    <!-- <th><input type="button" value="F5" onclick="F5()"></th> -->
+	</tr>
+   </table>
+   </div>
+
+   </br>
+   </br>
+
+   <div>
+      <p>
+      <strong>Instructions:</strong></br>
+	  Type numbers 1 to 4 for the corresponding tones
+	  </p>
+   </div>
+   <div>   
+      <table>
+      	<tr>
+           <th><input type="submit" value="Male Voice" onclick="male()"  class="buttonMale button" ></th>
+	       <th><input id="screen1" class="buttonMale button"></th>
+
+        </tr>  
+	    <tr>
+           <th><input type="submit" value="Female Voice" onclick="female()" class="buttonFemale button"></th>
+	       <th><input id="screen2" class="buttonFemale button"></th>
+        </tr>
+	    <tr>
+		   <th width="100" height="50"><input type="button" value="Clear" onclick="clearInput()" class="buttonC button"></th>
+		</tr>
+      </table> 
+    </div>
+
+
+   <div>
+   <img src='explanation.jpg' class="explanation" width="300" height="200">
+   </div>
+
+
+
+
+	<div>
+      <p>(The tool is still in beta)</p>
+	</div> 
+
+	<!-- <div>
+  	   <audio controls controlsList="nodownload">
+	      <source src="Family.mp3" type="audio/mp3">
+       </audio>
+	</div> -->
+
+    <div>
+      <p id="display" class="display"></p>
+    </div>
+
+<audio id=a src="M1.mp3" autostart="false">
+	</audio>
+<audio id=b src="M2.mp3" autostart="false">
+	</audio>	
+<audio id=c src="M3.mp3" autostart="false">
+	</audio>
+<audio id=d src="M4.mp3" autostart="false">
+	</audio>
+<audio id=e src="F1.mp3" autostart="false">
+	</audio>
+<audio id=f src="F2.mp3" autostart="false">
+	</audio>	
+<audio id=g src="F3.mp3" autostart="false">
+	</audio>
+<audio id=h src="F4.mp3" autostart="false">
+	</audio>	
+        </body>
 </html>
